// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineSpinner renders in a custom color 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: text-bottom;
  border: 0.125rem solid #069D4F;
  border-right-color: transparent;
  border-radius: 50%;
  -webkit-animation: wdnds 750ms linear infinite;
  animation: wdnds 750ms linear infinite;
  width: 1.25rem;
  height: 1.25rem;
  border-width: 0.125rem;
}

<div
  class="c0"
  color="#069D4F"
/>
`;

exports[`InlineSpinner renders the default variant 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: text-bottom;
  border: 0.125rem solid #001E3E;
  border-right-color: transparent;
  border-radius: 50%;
  -webkit-animation: wdnds 750ms linear infinite;
  animation: wdnds 750ms linear infinite;
  width: 1.25rem;
  height: 1.25rem;
  border-width: 0.125rem;
}

<div
  class="c0"
  color="#001E3E"
/>
`;

exports[`InlineSpinner renders the small size 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: text-bottom;
  border: 0.125rem solid #001E3E;
  border-right-color: transparent;
  border-radius: 50%;
  -webkit-animation: wdnds 750ms linear infinite;
  animation: wdnds 750ms linear infinite;
  width: 1rem;
  height: 1rem;
  border-width: 0.1rem;
}

<div
  class="c0"
  color="#001E3E"
/>
`;
